--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ font-size: 72px;
 font-style: normal;
 font-weight: 900;
 line-height: 95px; 
+padding-top: 0;
 }
 .new-3{
     color: #F00;
@@ -84,13 +85,19 @@ line-height: normal;
 height: 500px;
 flex-shrink: 0;
 }
-.new-7{
-    text-align: right;
-    background-image: url("../Happy-new-year/image/Vectorrr.png");
-    background-repeat: no-repeat;
+.vector{
+    width: 1320px;
+    height: 600px;
+    flex-shrink: 0;
+    border-radius: 16px;
+background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+background-image: url("../image/vectorrr.png");
+background-repeat: no-repeat;
+    
 
 }
-.new-8{
+
+.vector-content{
     color: #FFF;
 
 font-family: Merriweather;
@@ -99,6 +106,47 @@ font-style: normal;
 font-weight: 900;
 line-height: 88px; /* 137.5% */
 letter-spacing: 7.04px;
+    color: #FFF
 
+}
+.vector-content1{
+    color: rgba(255, 255, 255, 0.80);
+
+font-family: Inter;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+}
+.vector-content2{
+    color: #FFF;
+
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+border: #FFF;
+}
+.place{
+    width: 1320px;
+height: 482px;
+flex-shrink: 0;
+text-align: center;
+color: red;
+display: inline; 
+}
+.place2{
+    display: inline-flex;
+padding: 16px 32px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 8px;
+background: #F00;
+text-align: center;
+}
 
 }
