--- a/style.css
+++ b/style.css
@@ -149,4 +149,39 @@ background: #F00;
 text-align: center;
 }
 
+.footer{
+    width: 100%;
+    height: 70vh;
+    background-color: #000;
+}
+.subscribe-form {
+    display: flex;
+    max-width: 300px;
+    margin: 20px auto;
+}
+
+
+.subscribe-input {
+    flex: 1; 
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 20px 0 0 20px; 
+}
+.subscribe-button {
+        padding: 10px;
+        font-size: 16px;
+        border: 1px solid red;
+        background-color: red;
+        color: #fff;
+        border-radius: 0 20px 20px 0px; 
+}
+.newsletter{
+    background: #f1c6c6;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 60px ;
+    padding-top: 10px;
 }
