--- a/style.css
+++ b/style.css
@@ -148,6 +148,17 @@ border-radius: 8px;
 background: #F00;
 text-align: center;
 }
+.great-1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Creates 3 columns with equal width */
+    gap: 10px; /* Adds some spacing between columns */
+}
+
+.great-2{
+
+    padding: 20px; /* Optional: Adds padding for better visibility */
+    /* text-align: center;  */
+}
 
 .footer{
     width: 100%;
