--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     flex-shrink: 0;
     border-radius: 16px;
 background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
-background-image: url("../image/Banner\ Image.png");
+background-image: url("./image/Banner\ Image.png");
 background-repeat: no-repeat;
     
 }
